made changes to add a contact id jump to about page and fixed some layout bugs also made spacing neater

--- a/public_html/assets/scss/styles.scss
+++ b/public_html/assets/scss/styles.scss
@@ -115,6 +115,7 @@ h2 {
   color:$colorLight;
   font-family: $headingFont;
   display: inline;
+  text-align: center;
 }
 
 h3 {
@@ -271,7 +272,6 @@ color: $colorLight;
   // background-color: orange;
 }
 
-
 footer {
   // background-image: url("/assets/images/seamlessFlicksRed.png");
   background-color: $colorDark;
@@ -291,29 +291,11 @@ footer {
   // position: relative;
   //   bottom:0px;
   height: auto;
-  a {
-    padding: 20px 0px;
-  }
+    a {
+      padding: 20px 0px;
+    }
 }
 
-.testFooter {
-  // background-image: url("/assets/images/seamlessFlicksRed.png");
-  background-color: $colorDark;
-  color: $colorMainLight;
-  text-align: center;
-  padding: 10px 0px;
-  // position: absolute;
-  // right: 0;
-  // bottom: 0;
-  // left: 0;
-
-  // position: relative;
-  //   bottom:0px;
-  height: 60px;
-  a {
-    padding: 20px 0px;
-  }
-}
 
 
 /* /END/ DESKTOP Header, Banner and Footer Layout
@@ -386,10 +368,14 @@ $gutter: 20px;
   box-sizing: border-box;
 }
 
-.homeImages {
+.blockImages {
   min-height: 350px;
   float: left;
   padding-top: 45px;
+  text-align: center;
+  // a {
+  //   margin: 5px;
+  // }
 }
 
 //div[class*='col-'] {
@@ -433,11 +419,7 @@ $gutter: 20px;
   margin: auto;
   max-width: 34%;
   text-align: center;
-  padding: 18px 18px;
-  padding-top: 5px;
-  padding-bottom: 18px;
-  padding-left: 18px;
-  padding-right: 18px;
+  padding: 25px;
   display: block;
 }
 
@@ -472,9 +454,9 @@ figure {
   margin-bottom: 20px;
   background-color: $colorLight;
   a:link {
+    transition: none;
     color: $colorMain;
   }
-  
 }
 
 .textbox p, .textbox h1, .textbox h2, .textbox h3 {
@@ -507,11 +489,11 @@ figure {
 }
 
 .row1 {
-  min-height: 460px;
+  min-height: 500px;
 }
 
 .row2 {
-  min-height: 460px;
+  min-height: 520px;
 }
 
 .textRow1 {
@@ -520,6 +502,14 @@ figure {
 
 .textRow2 {
   min-height: 300px;
+}
+
+#contact {
+  // color: green;
+  // background-color: blue;
+  overflow: hidden;
+  height: 5px;
+  width: 5px;
 }
 
 /* // CRAFT CMS PHP CLASSES END
@@ -588,7 +578,7 @@ and (max-width: $breakpointTabletMax)
   .row1, .row2 {
     min-height: 0px;
   }
-  .homeImages {
+  .blockImages {
     padding-top: 20px;
   }
 
@@ -709,7 +699,7 @@ and (max-width: $breakpointPhoneMax)
     background-color: $colorMainLight;
   }
 
-  .homeImages {
+  .blockImages {
     padding-top: 20px;
   }
 
